--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ a.btn:hover, button:hover {
 }
 
 #modal-content {
-  background-color: #111;
+  background-color: #gold;
   margin: 15% auto;
   padding: 30px;
   border: 3px solid gold;
